--- a/styles/style.css
+++ b/styles/style.css
@@ -53,3 +53,83 @@ body{
 }
 
 /* nav completed */
+
+.banner{
+    
+    max-width: 1900px;;
+    min-height: 50px;
+   
+    /* min-height: 100%; */
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    
+    
+    
+
+}
+.content-container{
+    
+    width: 50%;
+    /* min-height:100%; */
+    
+    background-image: url("../images/Group\ 14.png");
+    padding-bottom: 7%;
+    padding-top: 7%;
+    text-align: center;
+    align-items: center;
+    
+    /* padding-left: 10%; */
+    /* padding: 20%; */
+ 
+    
+}
+.banner-title{
+    color: #0B0223;
+    font-size: 3rem;
+    font-weight: 600;
+}
+.content-container .main-title{
+    font-size: 5.6rem;
+    font-weight: 800;
+    background-image: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    color: transparent;
+    -webkit-background-clip: text;
+    margin: 0;
+}
+.common-title{
+    color: #534C64;
+    font-size: 1.3rem;
+    font-weight: 500;
+}
+.btn-1{
+     background-color: #FF42A5;
+     font-size: 1.3rem;
+     font-weight: 600;
+     color: #FFF;
+     padding: 10px 20px;
+     border-radius: 35px;
+     border: none;
+     margin-right: 20px;
+}
+.btn-2{
+    font-size: 1.3rem;
+    font-weight: 600;
+    color: #FFF;
+    padding: 10px 20px;
+    border-radius: 35px;
+    border: none;
+    background-color: #4EC5F7; 
+}
+.banner-img{
+    width: 50%;
+    
+}
+.banner-img img{
+    width:80%;
+    height: 80%;
+    
+  
+
+}
