--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -28,6 +28,11 @@
             width: 100%;
            
         }
+        /* banner done  */
+        .games-images{
+            grid-template-columns: repeat(2,1fr);
+            text-align: center;
+        }
     
 }
 @media screen and (max-width:425px) {
@@ -58,5 +63,10 @@
     }
     .banner-img{
         width: 100%;
+    }
+    /* banner done  */
+    .games-images{
+        grid-template-columns: 1fr;
+        text-align: center;
     }
 }
