--- a/styles/style.css
+++ b/styles/style.css
@@ -172,3 +172,59 @@ body{
     line-height: 30px;
 
 }
+/* games done  */
+.play{
+    border: 1px solid red;
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    gap: 10%;
+    margin-bottom: 100px;
+}
+.play-img{
+    width: 50%;
+    border: 1px solid green;
+    position: relative;
+}
+   
+    
+
+.play-content{
+    border: 1px solid blue;
+    width: 40%;
+    text-align: center;
+    /* margin-top: 10%; */
+    padding-top: 10%;
+    
+   
+}
+.play-content h3{
+    font-size: 3rem;
+    font-weight: 700;
+}
+.play-content p{
+    color:#534C64;
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 30px; 
+}
+
+
+
+.play-img-1{
+    width: 100%;
+    /* position: relative; */
+}
+.play-image-2{
+    /* position: absolute; */
+    /* top: 0px; */
+    width: 100%;
+}
+.play-img-2{
+
+
+    position: absolute;
+    top: 67%;
+    right: -20%;
+    
+}
