--- a/styles/style.css
+++ b/styles/style.css
@@ -174,7 +174,7 @@ body{
 }
 /* games done  */
 .play{
-    border: 1px solid red;
+    
     max-width: 1440px;
     margin: 0 auto;
     display: flex;
@@ -183,14 +183,14 @@ body{
 }
 .play-img{
     width: 50%;
-    border: 1px solid green;
+    
     position: relative;
 }
    
     
 
 .play-content{
-    border: 1px solid blue;
+   
     width: 40%;
     text-align: center;
     /* margin-top: 10%; */
@@ -228,3 +228,43 @@ body{
     right: -20%;
     
 }
+/* play done */
+.hoverr{
+    margin-top: 180px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid red;
+    display: flex;
+    padding-top: 20px;
+    
+    /* gap: 32px; */
+    max-width: 1300px;
+    flex-wrap: wrap;
+    /* flex-basis: 30%; */
+    align-items: center;
+    justify-content: center;
+    
+    
+}
+.hover-img{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    border: 1px solid transparent;
+    padding: 1px 1px;
+    border-radius: 50px;
+    flex-basis: 20%;
+}
+.hover-img img{
+    /* width: 60px; */
+    /* height: 60px; */
+}
+.hover-img:hover{
+    background-image:  linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    color: transparent;
+    -webkit-background-clip: text;
+    border: 1px solid #F948B2 ;
+    cursor: pointer;
+}
+
+
