--- a/styles/style.css
+++ b/styles/style.css
@@ -79,6 +79,7 @@ body{
     padding-top: 7%;
     text-align: center;
     align-items: center;
+    /* padding-left: 5%; */
     
     /* padding-left: 10%; */
     /* padding: 20%; */
